--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   background-image: url("./components/Assets/2637581.webp");
-  background-size: fill;
+  background-size: contain;
   background-position: center;
 }
 
