--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,16 +1,4 @@
-/* NavBar.module.css */
-.navbar {
-  font-family: 'Roboto', sans-serif;
-  background-color: rgba(255, 255, 255, .8);
-
-  font-size: 18px;
-  font-weight: 500;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem;
-  transition: all 0.3s ease-in-out;
-}
+/* 
 
 .navbar-brand {
   font-size: 24px;
@@ -79,17 +67,21 @@
     width: 50%;
     max-width: 15rem;
   }
-}
+} */
 
 /* NavBar.css */
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
+
 .NavBar {
-  background-color: #222;
-  font-family: Arial, sans-serif;
+  background: linear-gradient(90deg, #020024 0%, #090979 35%, #00d4ff 100%);
+  font-family: 'Roboto', sans-serif;
+  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.15);
 }
 
 .NavBar .navbar-brand {
   color: #fff;
+  font-weight: 500;
 }
 
 .NavBar .navbar-brand:hover {
@@ -97,12 +89,16 @@
 }
 
 .NavBar .navbar-nav .nav-link {
-  color: #bbb;
+  color: #BDBDBD; /* light grey */
   margin-right: 1em;
+  padding: 10px 20px;
+  border-radius: 25px;
+  transition: color 0.3s ease, background-color 0.3s ease;
 }
 
 .NavBar .navbar-nav .nav-link:hover {
-  color: #fff;
+  color: #212121; /* dark grey */
+  background-color: #FDB813; /* gold */
 }
 
 .NavBar .navbar-toggler {
@@ -116,20 +112,4 @@
 .NavBar img {
   height: 60px;
   width: auto;
-}
-
-
-/*...existing styles...*/
-
-.NavBar .navbar-nav .nav-link {
-  color: #BDBDBD; /* light grey */
-  transition: color 0.3s ease, background-color 0.3s ease;
-  padding: 10px 20px;
-  border-radius: 25px;
-  margin: 0 5px;
-}
-
-.NavBar .navbar-nav .nav-link:hover {
-  color: #212121; /* dark grey */
-  background-color: #FDB813; /* gold */
 }
